force-app/main/default/objects/Cruise_Checkin_Details_From_FA__c/Cruise_Checkin_Details_From_FA__c.object-meta.xml
<CustomObject>
    <label>Cruise Checkin Details(From FA)</label>
    <nameField>
        <displayFormat>Cruisechecking-{00000}</displayFormat>
        <label>Cruise Checkin Details(From FA) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cruise Checkin Details(From FA)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>