force-app/main/default/objects/Cruise_Checkin_Details_From_FA__c/fields/City_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>City_of_Birth__c</fullName>
    <label>City of Birth</label>
    <length>100</length>
    <type>Text</type>
</CustomField>