force-app/main/default/objects/Cruise_Checkin_Details_From_FA__c/fields/Dept_City_FA__c.field-meta.xml
<CustomField>
    <fullName>Dept_City_FA__c</fullName>
    <label>Dept City(FA)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>