force-app/main/default/objects/Cruise_Checkin_Details_From_FA__c/fields/NRMA__c.field-meta.xml
<CustomField>
    <fullName>NRMA__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>NRMA</label>
    <referenceTo>NRMA__c</referenceTo>
    <relationshipLabel>Cruise Checkin Details(From FA)</relationshipLabel>
    <relationshipName>Cruise_Checkin_Details_From_FA</relationshipName>
    <type>Lookup</type>
</CustomField>