force-app/main/default/objects/Cruise_Checkin_Details_From_FA__c/fields/PostCode__c.field-meta.xml
<CustomField>
    <fullName>PostCode__c</fullName>
    <label>PostCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>