force-app/main/default/objects/Cruise_Checkin_Details_From_FA__c/fields/Travel_Insurance_Provider__c.field-meta.xml
<CustomField>
    <fullName>Travel_Insurance_Provider__c</fullName>
    <label>Travel Insurance Provider</label>
    <length>100</length>
    <type>Text</type>
</CustomField>